ปรับ css และเพิ่มไฟล์ html
เพิ่ม profile.html / เพิ่มรูป

--- a/storyedit1.html
+++ b/storyedit1.html
@@ -92,34 +92,56 @@
                 </div>
                 <div class="edit-box"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-edit">edit</i></a></div>
             </div>
-            <div class="section-row home-section-3 story-section">
+            <div class="section-row home-section-3 story-section storyedit-section">
                 <div class="popular head-title">
                     <h3 class="text-title">ใต้แสงดาว</h3>
                 </div>
                 <div class="popular-list">
                     <ul class="list-group pmd-list pmd-card-list">
+                        <li class="list-group-item add-new-chapter">
+                            <div class="media-left number"><i class="material-icons md-light pmd-ripple-effect icon-add">edit</i></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">เขียนตอนใหม่</h3>
+                            </div>
+                            <div class="media-right">
+                            </div>
+                        </li>
                         <li class="list-group-item top-first">
                             <div class="media-left number"><span>1</span></div>
                             <div class="media-body">
                                 <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
                                 <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567</span></div>
-                                <div class="edit-delete-box">
-                                <span class="dropdown pmd-dropdown clearfix">
+                                <!-- <div class="edit-delete-box">
+                                    <span class="dropdown pmd-dropdown clearfix edit">
                                     <a href="javascript:void(0);" class="pmd-ripple-effect dropdown-toggle pmd-dropdown-hover" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true"><i class="material-icons md-light icon-edit">edit</i></a>
                                     <ul aria-labelledby="dropdownMenu2" role="menu" class="dropdown-menu">
         <li role="presentation"><a href="javascript:void(0);" tabindex="-1" role="menuitem">แก้ไขเรื่องนี้</a></li>
     </ul>
     </span>
-                                    <span class="dropdown pmd-dropdown clearfix">
+                                    <span class="dropdown pmd-dropdown clearfix delete">
+                                    <a href="javascript:void(0);" class="pmd-ripple-effect dropdown-toggle pmd-dropdown-hover" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true"><i class="material-icons md-light icon-delete">delete</i></a>
+                                    <ul aria-labelledby="dropdownMenu2" role="menu" class="dropdown-menu">
+        <li role="presentation"><a href="javascript:void(0);" tabindex="-1" role="menuitem">ลบเรื่องนี้</a></li>
+    </ul>
+    </span>
+                                </div> -->
+                                <div class="post-date-data edit-mode"><span>02/12/17</span></div>
+                            </div>
+                            <div class="media-right">
+                            <div class="edit-delete-box">
+                                    <span class="dropdown pmd-dropdown clearfix edit">
+                                    <a href="javascript:void(0);" class="pmd-ripple-effect dropdown-toggle pmd-dropdown-hover" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true"><i class="material-icons md-light icon-edit">edit</i></a>
+                                    <ul aria-labelledby="dropdownMenu2" role="menu" class="dropdown-menu">
+        <li role="presentation"><a href="javascript:void(0);" tabindex="-1" role="menuitem">แก้ไขเรื่องนี้</a></li>
+    </ul>
+    </span>
+                                    <span class="dropdown pmd-dropdown clearfix delete">
                                     <a href="javascript:void(0);" class="pmd-ripple-effect dropdown-toggle pmd-dropdown-hover" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true"><i class="material-icons md-light icon-delete">delete</i></a>
                                     <ul aria-labelledby="dropdownMenu2" role="menu" class="dropdown-menu">
         <li role="presentation"><a href="javascript:void(0);" tabindex="-1" role="menuitem">ลบเรื่องนี้</a></li>
     </ul>
     </span>
                                 </div>
-                                <div class="post-date-data edit-mode"><span>02/12/17</span></div>
-                            </div>
-                            <div class="media-right">
                             </div>
                         </li>
                         <li class="list-group-item">
