--- a/storyread.html
+++ b/storyread.html
@@ -19,7 +19,14 @@
 </head>
 
 <body>
-
+<div class="title-numberep">
+                <i class="material-icons md-light icon-navigate-before">navigate_before</i>
+                <h2>Ep.23  รอคอยใต้แสงดาว</h2>
+                <span>
+            <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-bookmark">bookmark</i></a>
+            <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-share">share</i></a>
+            </span>
+            </div>
     <div class="container">
         <!-- Nav menu with side menu -->
         <nav class="navbar navbar-inverse navbar-fixed-top pmd-navbar">
@@ -79,14 +86,6 @@
             <!-- /.container-fluid -->
             <div class="pmd-sidebar-overlay"></div>
         </nav>
-        <div class="title-numberep">
-            <i class="material-icons md-light icon-navigate-before">navigate_before</i>
-            <h2>Ep.23  รอคอยใต้แสงดาว</h2>
-            <span>
-        <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-bookmark">bookmark</i></a>
-        <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-share">share</i></a>
-        </span>
-        </div>
         <!-- Main Content -->
         <div class="maincontent">
             <div class="section-row">
@@ -107,6 +106,14 @@
                     <div class="description">
                         <p>เรื่องราวชักเข้มข้นขึ้นแล้วไหมล่ะครับ ใครจะชักจูงให้สองคนนี้มาพบกันอีกครั้ง รอติดตามต่อไปนะครับ</p>
                     </div>
+                </div>
+            </div>
+            <div class="section-row comment-row">
+                <div class="comment-box">Comment</div>
+                <div class="footer-ep">
+                    <div class="col-md-4 like-count"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">favorite_border</i></a><span class="count">99999</span></div>
+                    <div class="col-md-4 navigator-ep"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_before</i></a><span class="number-ep">EP.23</span><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_next</i></a></div>
+                    <div class="col-md-4"></div>
                 </div>
             </div>
         </div>
