อัพเดทไฟล์ / เพิ่มไฟล์ / เพิ่มรูป
ไฟล์ใหม่ category.html
อัพเดท profile.html / index.html (หน้าแรก) / storyedit1.html

--- a/storyedit1.html
+++ b/storyedit1.html
@@ -79,7 +79,7 @@
             <div class="pmd-sidebar-overlay"></div>
         </nav>
         <!-- Main Content -->
-        <div class="maincontent container">
+        <div class="maincontent">
             <div class="section-row home-section-1 story-feature">
                 <div class="hilight-homepage">
                     <img src="images/hilight.jpg">
