ไฟล์ที่ทอทให้พี่ปรับ
index.html ส่วนที่ให้เหลือ ul เดียว แล้วก็ อัพเดท style.css

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                                     <li><a class="pmd-ripple-effect" href="javascript:void(0);">คำถามที่พบบ่อย</a></li>
                                 </ul>
                             </li>
-                            <li><a href="javascript:void(0);"><span class="menu-mobile">วิธีใช้งาน</span></a></li>
-                            <li><a href="javascript:void(0);"><span class="menu-mobile">วิธีเติมเหรียญ</span></a></li>
+                            <li><a href="javascript:void(0);">วิธีเติมเหรียญ</a></li>
+                            <li class="register-write"><a href="javascript:void(0);">สมัครเขียน</a></li>
+                            <li class="register-read"><a href="javascript:void(0);">สมัครอ่าน</a></li>
                         </ul>
                         <!-- Enf Menu Example 2 -->
                     </div>
@@ -411,8 +412,73 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="list-group-item">
+                            <div class="media-left number"><span>6</span></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
+                                <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567</span></div>
+                                <div class="category-data"><span>Romantic</span><i class="material-icons md-light">favorite</i></div>
+                            </div>
+                            <div class="media-right">
+                                <div class="thumbnail">
+                                    <img src="images/hilight.jpg" />
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media-left number"><span>7</span></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
+                                <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567 </span></div>
+                                <div class="category-data"><span>Drama</span><i class="material-icons md-light">favorite</i></div>
+                            </div>
+                            <div class="media-right">
+                                <div class="thumbnail">
+                                    <img src="images/hilight.jpg" />
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media-left number"><span>8</span></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
+                                <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567 </span></div>
+                                <div class="category-data"><span>Drama</span><i class="material-icons md-light">favorite</i></div>
+                            </div>
+                            <div class="media-right">
+                                <div class="thumbnail">
+                                    <img src="images/hilight.jpg" />
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media-left number"><span>9</span></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
+                                <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567 </span></div>
+                                <div class="category-data"><span>Drama</span><i class="material-icons md-light">favorite</i></div>
+                            </div>
+                            <div class="media-right">
+                                <div class="thumbnail">
+                                    <img src="images/hilight.jpg" />
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="media-left number"><span>10</span></div>
+                            <div class="media-body">
+                                <h3 class="list-group-item-heading">ขอบฟ้า ขอบฝั่ง สายน้ำและทะเล</h3>
+                                <div class="favorite-data"><i class="material-icons md-light favorite">favorite</i><span>1234567 </span></div>
+                                <div class="category-data"><span>Drama</span><i class="material-icons md-light">favorite</i></div>
+                            </div>
+                            <div class="media-right">
+                                <div class="thumbnail">
+                                    <img src="images/hilight.jpg" />
+                                </div>
+                            </div>
+                        </li>
                     </ul>
-                    <ul class="list-group pmd-list pmd-card-list">
+                    <!-- <ul class="list-group pmd-list pmd-card-list">
                         <li class="list-group-item">
                             <div class="media-left number"><span>6</span></div>
                             <div class="media-body">
@@ -478,7 +544,7 @@
                                 </div>
                             </div>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
