--- a/category.html
+++ b/category.html
@@ -115,7 +115,7 @@
         <div class="maincontent">
             <div class="section-head-page">
                 <div class="head-titlebar">
-                    <div class="title-head-pic"><img src="images/cat_romancetic.png"></div>
+                    <div class="title-head-pic"><img src="images/cat_romanticlove.png"></div>
                     <div class="category-name">
                         <h3>นิยายรักโรแมนติค</h3>
                     </div>
@@ -128,7 +128,7 @@
                 <div class="bookmark-list-row">
                     <div class="block-row">
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -183,7 +183,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail update">
+                            <div class="feature-thumbnail new">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -211,7 +211,7 @@
                 <div class="latest-list-row">
                     <div class="block-row">
                         <div class="col-3">
-                            <div class="feature-thumbnail">
+                            <div class="feature-thumbnail update">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
@@ -301,7 +301,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="feature-thumbnail">
+                            <div class="feature-thumbnail update">
                                 <img src="images/hilight.jpg">
                             </div>
                             <div class="title-content">
