อัพเดทล่าสุด ตอน ณ ขณะคุยกับทอท เที่ยงคืน 18 นาที
ลองดูจากไฟล์ html แต่ละไฟล์ได้เลยคับ

--- a/category.html
+++ b/category.html
@@ -100,8 +100,9 @@
                                     <li><a class="pmd-ripple-effect" href="javascript:void(0);">คำถามที่พบบ่อย</a></li>
                                 </ul>
                             </li>
-                            <li><a href="javascript:void(0);"><span class="menu-mobile">วิธีใช้งาน</span></a></li>
-                            <li><a href="javascript:void(0);"><span class="menu-mobile">วิธีเติมเหรียญ</span></a></li>
+                            <li><a href="javascript:void(0);">วิธีเติมเหรียญ</a></li>
+                            <li class="register-write"><a href="javascript:void(0);">สมัครเขียน</a></li>
+                            <li class="register-read"><a href="javascript:void(0);">สมัครอ่าน</a></li>
                         </ul>
                         <!-- Enf Menu Example 2 -->
                     </div>
