--- a/storyread.html
+++ b/storyread.html
@@ -21,7 +21,7 @@
 <body>
 <div class="title-numberep">
                 <i class="material-icons md-light icon-navigate-before">navigate_before</i>
-                <h2>Ep.23  รอคอยใต้แสงดาว</h2>
+                <h2>ตอนที่ 23  รอคอยใต้แสงดาว</h2>
                 <span>
             <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-bookmark">bookmark</i></a>
             <a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light icon-share">share</i></a>
@@ -34,9 +34,17 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="search-box col-md-4">
-                    <button class="btn">
+                    <!-- Begin Change Search Box -->
+                    <div class="form-group">
+                        <input type="text" id="regular1" class="form-control" placeholder="คำค้นหา">
+                        <button class="btn">
+                            <i class="material-icons md-light">search</i>
+                        </button>
+                    </div>
+                    <!-- End Change Search Box -->
+                    <!-- <button class="btn">
                         <i class="material-icons md-light">search</i>
-                    </button>
+                    </button> -->
                 </div>
                 <div class="navbar-header col-md-4">
                     <button class="pmd-ripple-effect navbar-toggle pmd-navbar-toggle" type="button">
@@ -45,7 +53,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="javascript:void(0);" class="navbar-brand navbar-brand-custome"><img src="images/logo_mareads.png" /></a>
+                    <a href="javascript:void(0);" class="navbar-brand navbar-brand-custome"><img class="logo-mobile" src="images/logomareads_mobile.png" /><img class="logo-desktop" src="images/logomareads_desktop.png" /></a>
                 </div>
                 <div class="user-box col-md-4">
                     <div class="dropdown pmd-dropdown pmd-user-info">
@@ -69,16 +77,42 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse pmd-navbar-sidebar">
                     <div id="box-row-2">
-                        <ul class="nav navbar-nav">
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Romantic</span><span class="menu-desktop"><img src="images/menu_romantic.gif"></span> <span class="sr-only">(current)</span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Drama</span><span class="menu-desktop"><img src="images/menu_drama.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Fantasy</span><span class="menu-desktop"><img src="images/menu_fantasy.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Thriller</span><span class="menu-desktop"><img src="images/menu_thriller.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Comedy</span><span class="menu-desktop"><img src="images/menu_comedy.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Erotic</span><span class="menu-desktop"><img src="images/menu_erotic.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Sci-fy</span><span class="menu-desktop"><img src="images/menu_scify.gif"></span></a></li>
-                            <li><a class="pmd-ripple-effect" href="javascript:void(0);"><span class="menu-mobile">Gay</span><span class="menu-desktop"><img src="images/menu_gay.gif"></span></a></li>
+                        <ul class="nav navbar-nav" style="display:none;">
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายรักโรแมนติค</span><!-- <span class="menu-desktop"><img src="images/menu_romantic.gif"></span> --> <span class="sr-only">(current)</span></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายแปลจีน</span><!-- <span class="menu-desktop"><img src="images/menu_drama.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายอิโรติค</span><!-- <span class="menu-desktop"><img src="images/menu_fantasy.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายวาย/Yaoi/Yuri</span><!-- <span class="menu-desktop"><img src="images/menu_thriller.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยาย FanFiction</span><!-- <span class="menu-desktop"><img src="images/menu_comedy.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายสืบสวนสอบสวน</span><!-- <span class="menu-desktop"><img src="images/menu_erotic.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">นิยายแฟนตาซี</span><!-- <span class="menu-desktop"><img src="images/menu_scify.gif"></span> --></a></li>
+                            <li><a href="javascript:void(0);"><span class="menu-mobile">บทความ/เรื่องสั้น/ปกิณกะ</span><!-- <span class="menu-desktop"><img src="images/menu_gay.gif"></span> --></a></li>
                         </ul>
+                        <!-- Begin Menu Example 2 -->
+                        <ul class="nav navbar-nav">
+                            <li class="dropdown pmd-dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle" data-sidebar="true" href="javascript:void(0);">หมวดนิยาย <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายรักโรแมนติค</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายแปลจีน</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายอิโรติค</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายวาย/Yaoi/Yuri</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยาย FanFiction</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายสืบสวนสอบสวน</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">นิยายแฟนตาซี</a></li>
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">บทความ/เรื่องสั้น/ปกิณกะ</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown pmd-dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle" data-sidebar="true" href="javascript:void(0);">วิธีใช้งาน <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="pmd-ripple-effect" href="javascript:void(0);">คำถามที่พบบ่อย</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="javascript:void(0);">วิธีเติมเหรียญ</a></li>
+                            <li class="register-write"><a href="javascript:void(0);">สมัครเขียน</a></li>
+                            <li class="register-read"><a href="javascript:void(0);">สมัครอ่าน</a></li>
+                        </ul>
+                        <!-- Enf Menu Example 2 -->
                     </div>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -112,7 +146,7 @@
                 <div class="comment-box">Comment</div>
                 <div class="footer-ep">
                     <div class="col-md-4 like-count"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">favorite_border</i></a><span class="count">99999</span></div>
-                    <div class="col-md-4 navigator-ep"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_before</i></a><span class="number-ep">EP.23</span><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_next</i></a></div>
+                    <div class="col-md-4 navigator-ep"><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_before</i></a><span class="number-ep">ตอนที่ 23</span><a href="javascript:void(0);" class="pmd-ripple-effect"><i class="material-icons md-light">navigate_next</i></a></div>
                     <div class="col-md-4"></div>
                 </div>
             </div>
