--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <img src="images/hilight.jpg">
                 </div>
                 <div class="bookmark head-title">
-                    <h3 class="text-title">Bookmark</h3>
+                    <h3 class="text-title">นิยายที่ชอบ</h3>
                     <i class="material-icons md-light all-next">chevron_right</i>
                     <i class="material-icons md-light all-next">chevron_right</i>
                 </div>
@@ -196,7 +196,7 @@
             </div>
             <div class="section-row home-section-2">
                 <div class="latest head-title">
-                    <h3 class="text-title">Latest</h3>
+                    <h3 class="text-title">นิยายล่าสุด</h3>
                     <i class="material-icons md-light all-next">chevron_right</i>
                     <i class="material-icons md-light all-next">chevron_right</i>
                 </div>
@@ -341,7 +341,7 @@
             </div>
             <div class="section-row home-section-3 home-popular">
                 <div class="popular head-title">
-                    <h3 class="text-title">Popular</h3>
+                    <h3 class="text-title">นิยายยอดนิยม</h3>
                     <i class="material-icons md-light all-next">chevron_right</i>
                     <i class="material-icons md-light all-next">chevron_right</i>
                 </div>
