--- a/storyedit1.html
+++ b/storyedit1.html
@@ -114,6 +114,9 @@
         </nav>
         <!-- Main Content -->
         <div class="maincontent">
+            <div class="section-row heading-toppage">
+                <h3>นิยายของคุณ</h3>
+            </div>
             <div class="section-row home-section-1 story-feature">
                 <div class="hilight-homepage">
                     <img src="images/hilight.jpg">
@@ -162,7 +165,7 @@
                                 <div class="post-date-data edit-mode"><span>02/12/17</span></div>
                             </div>
                             <div class="media-right">
-                            <div class="edit-delete-box">
+                                <div class="edit-delete-box">
                                     <span class="dropdown pmd-dropdown clearfix edit">
                                     <a href="javascript:void(0);" class="pmd-ripple-effect dropdown-toggle pmd-dropdown-hover" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true"><i class="material-icons md-light icon-edit">edit</i></a>
                                     <ul aria-labelledby="dropdownMenu2" role="menu" class="dropdown-menu">
