--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                                 </ul>
                             </li>
                             <li><a href="javascript:void(0);">วิธีเติมเหรียญ</a></li>
+                            <li><a href="javascript:void(0);">เกี่ยวกับเรา</a></li>
                             <li class="register-write"><a href="javascript:void(0);">สมัครเขียน</a></li>
                             <li class="register-read"><a href="javascript:void(0);">สมัครอ่าน</a></li>
                         </ul>
